# rdkit_parallel_tools

./: README.md  environment.yml  license.txt  setup.cfg
rdkit_parallel_tools/: __init__.py  rdkit_parallel_tools.py
tests/: rdkit_parallel_test.py  sd_reader_test.py
