[metadata]
name = rdkit_parallel_tools
version = 0.1.0-alpha
author = Joos Kiener
author_email = joos.kiener@gmail.com
description = functions to simplify usage of rdkit using all cores on multicore cpus
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kienerj/rdkit-parallel-tools
project_urls =
    Bug Tracker = https://github.com/kienerj/rdkit-parallel-tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
packages = find:
python_requires = >=3.10
install_requires =
    rdkit

[options.packages.find]
exclude = rdkit_parallel_tools_tests*